# peak

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
docs/: SPEC.md
src/: App.tsx  coach.ts  constants.ts  data.ts  defaults.ts  goals.ts  model.ts  seed.ts  storage.ts  store.tsx  styles.css  theme.ts  types.ts  units.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ActionSheet.tsx  ActiveSession.tsx  BottomNav.tsx  CreateSheets.tsx  ExerciseDetail.tsx  ExercisePickerModal.tsx  Recovery.tsx  RoutineBuilder.tsx  SessionDetail.tsx  SessionEditor.tsx  SessionMenu.tsx  SessionStart.tsx  Sheets.tsx  StatusBar.tsx  WeeklyAgenda.tsx  WeeklyPlanEditor.tsx  ui.tsx
src/constants/: ui.ts
src/data/: benchmarkVariants.ts  benchmarks.ts  bodyGeometry.ts  bodyParts.json  capabilityTree.ts  exerciseCatalog.test.ts  exerciseCatalog.ts  exerciseEmphasis.ts  exercises.ts  migration.ts  muscleMap.ts  muscleRegions.ts  routines.ts  seedSources.ts  weeklyTemplates.ts
src/engine/: benchmarkInput.ts  cohort.ts  composition.ts  consistency.ts  exerciseDetail.ts  index.ts  infer.ts  loadModel.test.ts  math.ts  peakScore.test.ts  progressionHint.test.ts  progressionHint.ts  projection.ts  recovery.ts  regions.ts  rollup.ts  score.ts  sessionDetail.test.ts  sessionDetail.ts  weeklyPlan.ts
src/screens/: Body.tsx  Coach.tsx  Feed.tsx  Goals.tsx  Improve.tsx  Log.tsx  Onboarding.tsx  Score.tsx  layoutPresets.ts
(+27 files in other folders)
